--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,10 @@ repositories {
 		url = "https://maven.legacyfabric.net"
 	}
 	// Fixed LWJGL on Linux
-	maven {
-		name = 'Babric'
-		url = 'https://maven.glass-launcher.net/babric'
-	}
+	//maven {
+	//	name = 'Babric'
+	//	url = 'https://maven.glass-launcher.net/babric'
+	//}
 }
 
 loom {
@@ -50,7 +50,7 @@ dependencies {
  		exclude module: "legacy-fabric-entity-events-v1"
  	}
 
-	if (lwjgl2) {
+	/*if (lwjgl2) {
 		if (currentOs.contains("mac")) {
 			implementation 'org.lwjgl.lwjgl:lwjgl_util:2.9.4-nightly-20150209'
 			implementation 'org.lwjgl.lwjgl:lwjgl:2.9.4-nightly-20150209'
@@ -60,10 +60,10 @@ dependencies {
 			implementation 'org.lwjgl.lwjgl:lwjgl:2.9.4-babric.1'
 			implementation 'org.lwjgl.lwjgl:lwjgl-platform:2.9.4-babric.1'
 		}
-	}
+	}*/
 }
 
-if (lwjgl2) {
+/*if (lwjgl2) {
 	if (currentOs.contains("mac")) {
 		configurations.all {
 			resolutionStrategy {
@@ -85,7 +85,7 @@ if (lwjgl2) {
 			}
 		}
 	}
-}
+}*/
 
 processResources {
 	inputs.property "version", project.version
